Release Note

* 8/15/2014
  * fixed for loadXML
  * fixed for retry
  * fixed incexec to use comm_parameters
  * changed AtlasProdPP to freeze output and log datasets
  * decreased limit for instance renewal in Interaction

* 8/14/2014
  * changed to allow reactivation of aborted tasks 
  * changed some method to avoid row contention
  * fixed AtlasDDM for sites which share the same DDM endpoints 

* 8/13/2014
  * removed delay after scouts
  * fixed AtlasAnalJB for nThrottle
  * changed to lock tasks before prepare or process
  * added more debug info to AtlasAnalJB
  * removing currentPrrio limit when counting jobs in AtlasAnalJB

* 8/12/2014
  * fixed file rescue for pseudo input
  * improved performance of getTasksToBeProcessed
  * fixed TaskRefinerBase for GRL
  * fixed file rescue for orphaned merging
  * added lock against multiple processing
  * using tobroken in JG

* 8/11/2014
  * fixed AtlasAnalJB for remote access sites

* 8/6/2014
  * fixed JG for ES jobs to have temporary log file names

* 8/5/2014
  * added campaign info
  * skipping some checks in AtlasProdJobBrokerage when site is preassigned

* 8/1/2014
  * introduced waitInput for Event Picking
  * fixed scouts to take nEventsPerJob into account

* 7/30/2014
  * added a protection against multiple registration of the same task

* 7/29/2014
  * modified scout data calculation to take coreCount into account

* 7/25/2014
  * added more patterns for hospital queues

* 7/24/2014
  * setting superStatus

* 7/23/2014
  * added retryChildTasks_JEDI
  * added stateChangeTime
  * setting maxAttempt for secondary files as well

* 7/22/2014
  * removed US constraint from network-aware brokerage

* 7/19/2014
  * added a protection to CF to set ready to task when only secondary is checked
  * fixed maxDiskCout

* 7/10/2014
  * fixed retryTask
  * changed status=timeout to aborted
  * fixed calculation for effective walltime
  * removed <> from http logging messages
  * added refresh() to *Base