@@ -7,7 +7,6 @@ import datetime
 from pandajedi.jedicore.ThreadUtils import ListWithLock,ThreadPool,WorkerThread
 from pandajedi.jedicore import Interaction
 from pandajedi.jedicore.MsgWrapper import MsgWrapper
-from pandajedi.jedicore import ParseJobXML
 from pandajedi.jedirefine import RefinerUtils
 from JediKnight import JediKnight
 from TaskGenerator import TaskGenerator
@@ -133,13 +132,7 @@ class ContentsFeederThread (WorkerThread):
                     nChunksForScout = 10
                     # load XML
                     if taskSpec.useLoadXML():
-                        try:
-                            loadXML = taskParamMap['loadXML']
-                            xmlConfig = ParseJobXML.dom_parser(xmlStr=loadXML)
-                        except:
-                            errtype,errvalue = sys.exc_info()[:2]
-                            tmpLog.error('failed to load XML config with {0}:{1}'.format(errtype.__name__,errvalue))
-                            taskBroken = True
+                        xmlConfig = taskParamMap['loadXML']
                     else:
                         xmlConfig = None
                     # check no wait
