@@ -1,5 +1,8 @@
 Release Note
 
+* 8/16/2014
+  * fixed for xmlConfig
+
 * 8/15/2014
   * fixed for loadXML
   * fixed for retry
